ProfileInterpreter crashes vm

XMLWordPrintable

    • aarch32
    • linux

      Seems that ProfileInterpreter worked long time ago, now it can't even assembled

      # Internal Error (/home/anton/proj/zulu8-arm-dev/hotspot/src/cpu/aarch32/vm/assembler_aarch32.hpp:863), pid=20478, tid=1961530464
      # assert(status) failed: invalid imm

            Assignee:
            Sergey Nazarkin
            Reporter:
            Sergey Nazarkin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: