8162400: aarch32: ProfileInterpreter crashes vm Reviewed-by: duke Contributed-by: Anton Kozlov <akozlov@azul.com>